# ai-classifier-template

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEARN.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  TROUBLESHOOTING.md
examples/: custom_classifier.py  quick_start.py
examples/configs/: template_config.yaml
examples/data/: predict.csv  pretrained_model.json  train.csv
src/ai_classifier/: __init__.py  __main__.py
src/ai_classifier/classifiers/: __init__.py  sklearn_classifier.py  template_classifier.py
src/ai_classifier/cli/: commands.py
src/ai_classifier/core/: __init__.py  base.py  config.py  exceptions.py
src/ai_classifier/data/: __init__.py  loaders.py  preprocessing.py
src/ai_classifier/training/: __init__.py  callbacks.py  metrics.py  pipeline.py
src/ai_classifier/utils/: __init__.py  logging.py  serialization.py
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_serialization.py  test_template_classifier.py
